develop branch closed - all new code in new branches

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,16 @@ javax.validation.constraints.NotBlank.message=field cannot be empty
 #javax.validation.constraints.Size.message=field cannot be empty
 not.so.funny=noice
 this.will.work=double noice
+
+#global
+javax.validation.constraints.Size.message=Size must be between {min} and {max}
+
+#login
+login.error=Invalid username or password
+
+#user create & update form
+email.not.blank.and.unique=Email field must filled out & unique
+username.not.blank.and.unique=Username field must filled out & unique
+password.pattern=1 lowercase letter, 1 uppercase letter, 1 number, 1 special character and at least 8 characters long
+password.blank=Password can't be blank
+passwords.dont.match=Passwords don't match, try again
