user validators: unique username and unique email implementation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,3 +16,7 @@ username.not.blank.and.unique=Username field must filled out & unique
 password.pattern=1 lowercase letter, 1 uppercase letter, 1 number, 1 special character and at least 8 characters long
 password.blank=Password can't be blank
 passwords.dont.match=Passwords don't match, try again
+
+#custom validator
+uniqueEmail.error.message=Email is already registered, try another one
+uniqueUsername.error.message=Username is already registered, try another one
