setup 403, 404, 500 error pages and actions, update security config file to block users and admins to creating accounts and loging in again

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,3 +20,10 @@ passwords.dont.match=Passwords don't match, try again
 #custom validator
 uniqueEmail.error.message=Email is already registered, try another one
 uniqueUsername.error.message=Username is already registered, try another one
+
+#error pages
+403=Now what are you doing here? You shouldn't be here!
+404=Seems like there isn't a page you're looking for. Sorry!
+500=Shoot! The server encountered an unexpected condition that prevented it from fulfilling the request. Sorry!
+error=This is difficult to say, but there's some kind of error, sry!
+marty.go.back=Marty we have to go back!
