user actions complete; add email service + implementation; add key generator interface + implementation; clear user entity from annotations requiring dependency injection

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,6 +16,8 @@ username.not.blank.and.unique=Username field must filled out & unique
 password.pattern=1 lowercase letter, 1 uppercase letter, 1 number, 1 special character and at least 8 characters long
 password.blank=Password can't be blank
 passwords.dont.match=Passwords don't match, try again
+enable.error=user can be only enabled (1) or not (0)
+role.error=enabled value can only be 1 for user or 2 for admin
 
 #custom validator
 uniqueEmail.error.message=Email is already registered, try another one
