design home page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,3 @@
-home.welcome=howdy ho
-javax.validation.constraints.NotBlank.message=field cannot be empty
-#javax.validation.constraints.Size.message=field cannot be empty
-not.so.funny=noice
-this.will.work=double noice
-
 #global
 javax.validation.constraints.Size.message=Size must be between {min} and {max}
 
@@ -29,3 +23,10 @@ uniqueUsername.error.message=Username is already registered, try another one
 500=Shoot! The server encountered an unexpected condition that prevented it from fulfilling the request. Sorry!
 error=This is difficult to say, but there's some kind of error, sry!
 marty.go.back=Marty we have to go back!
+
+#copywriting
+home.welcome=Hi there
+javax.validation.constraints.NotBlank.message=field cannot be empty
+#javax.validation.constraints.Size.message=field cannot be empty
+not.so.funny=noice
+this.will.work=double noice
