admin can create users and admins

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,6 +12,8 @@ password.blank=Password can't be blank
 passwords.dont.match=Passwords don't match, try again
 enable.error=user can be only enabled (1) or not (0)
 role.error=enabled value can only be 1 for user or 2 for admin
+enabled.options=enabled options are 0 for disabled and 1 for enabled
+role.options=role options are admin or user
 
 #custom validator
 uniqueEmail.error.message=Email is already registered, try another one
