user snippet crud (backend perspective) finalized ;

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 #global
-javax.validation.constraints.Size.message=Size must be between {min} and {max}
+javax.validation.constraints.Size.message=size must be between {min} and {max}
+javax.validation.constraints.NotBlank.message=you cannot leave this field empty
 
 #login
 login.error=Invalid username or password
@@ -28,7 +29,6 @@ marty.go.back=Marty we have to go back!
 
 #copywriting
 home.welcome=Hi there
-javax.validation.constraints.NotBlank.message=field cannot be empty
 #javax.validation.constraints.Size.message=field cannot be empty
 not.so.funny=noice
 this.will.work=double noice
