--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,6 +25,7 @@ uniqueUsername.error.message=Username is already registered, try another one
 404=Seems like there isn't a page you're looking for. Sorry!
 500=Shoot! The server encountered an unexpected condition that prevented it from fulfilling the request. Sorry!
 error=This is difficult to say, but there's some kind of error, sry!
+snippetMissing=Seems like you want to delete the same snippet AGAIN or you don't have access to it. Not gonna happen!
 marty.go.back=Marty we have to go back!
 
 #copywriting
