password reset functionality working

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,7 @@ login.error=Invalid username or password
 #user create & update form
 email.not.blank.and.unique=Email field must filled out & unique
 username.not.blank.and.unique=Username field must filled out & unique
+email.not.registered=Email not registered
 password.pattern=1 lowercase letter, 1 uppercase letter, 1 number, 1 special character and at least 8 characters long
 password.blank=Password can't be blank
 passwords.dont.match=Passwords don't match, try again
